--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html(lang="en")
 	head
 		title =pageTitle
+		meta(name="apple-mobile-web-app-capable", content="yes")
 		!= css('app')
 		!= js('jquery-1.7.2.min')
 		!= js('app')
