--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -154,7 +154,7 @@ a:active {
 
 
 .site-page {
-	background: #393939;
+	background: #64574e;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -162,7 +162,7 @@ a:active {
 	color: white;
   background-attachment: scroll;
     background-clip: border-box;
-    background-color: #393939;
+    background-color: #64574e;
     background-image: none;
     background-origin: padding-box;
     background-position: 0 0;
