--- a/views/blog/show.jade
+++ b/views/blog/show.jade
@@ -3,7 +3,7 @@ article.blog
 		section.post
 			h2= post.title
 			p.meta
-				| 28 de setembro, 2012
+				!= moment(post.date).format('LL')
 				a.author(href='/about#jon')
 					img(src='/img/about/gui.png', width='68', height='68')
 			p!= md.parse(post.body)
