--- a/views/blog/show.jade
+++ b/views/blog/show.jade
@@ -4,6 +4,6 @@ article.blog
 			h2= post.title
 			p.meta
 				!= moment(post.date).format('LL')
-				a.author(href='/about#jon')
+				a.author(href='/sobre')
 					img(src='/img/about/gui.png', width='68', height='68')
 			p!= md.parse(post.body)
