--- a/views/menu.jade
+++ b/views/menu.jade
@@ -5,3 +5,6 @@ header.site-header
 			a(href='/') Blog 
 		li 
 			a(href='/sobre') Sobre
+		li
+			a#search-button(href="#") 
+				| <span class="icon">z</span>
