--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -226,6 +226,32 @@ a:active {
   opacity: 0.5;
 }
 
+
+
+#search-form{
+  width: 180px;
+  margin: auto;
+  display: none;
+}
+
+#search-form #search-field{
+  color: rgba(255,255,255, 0.9);
+  background: transparent;
+  border: solid 1px rgba(71, 71, 71, 0.25);
+  border-radius: 20px;
+  font-size: 14px;
+  padding: 4px 15px;
+  outline: none;
+  -webkit-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
+  -moz-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
+}
+
+.menu #search-button{
+  font-size: 18px;
+}
+
+
 .site-page .site-header .site-logo {
   float: left;
   width: 500px;
