--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en")
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		!= css('app')
+		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
 		!= js('app')
 	body.site-page
