Projetos added to menu

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -4,6 +4,8 @@ header.site-header
 		li 
 			a(href='/') Blog 
 		li 
+			a(href='/') Projetos
+		li 
 			a(href='/sobre') Sobre
 		li
 			a#search-button(href="#") 
