--- a/views/contato/layout.jade
+++ b/views/contato/layout.jade
@@ -3,6 +3,7 @@ html(lang="en")
 	head
 		title =pageTitle
 		!= css('app')
+		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
 		!= js('app')
 	body.site-page
