--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -1,7 +1,6 @@
 article.blog
 	header
-		form#search-form(name='post', method='get', action='/search')
-			input#search-field(name='q', placeholder='Search', type='text', size='20')
+		!=partial('search_field')
 		ul
 			li 
 				h1 
