--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -19,7 +19,12 @@ article.blog
 						a(href='/'+post.urlid)!= post.title
 					p.meta
 						!= moment(post.date).format('LL')
+						
+					!= partial('post_tags', {post : post})
+
 					p!= md.parse(post.body)
-								
+
+
+									
 								
 									
