RSS icon added to menu

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -10,3 +10,8 @@ header.site-header
 		li
 			a#search-button(href="#") 
 				| <span class="icon">z</span>
+		li
+			a(href="/rss.xml") 
+				| <span class="icon">Æ</span>
+
+				
