--- a/views/menu.jade
+++ b/views/menu.jade
@@ -6,7 +6,7 @@ header.site-header
 		li 
 			a(href='/') Projetos
 		li 
-			a(href='/sobre') Sobre
+			a(href='/about') Sobre
 		li
 			a#search-button(href="#") 
 				| <span class="icon">z</span>
