--- a/views/menu_admin.jade
+++ b/views/menu_admin.jade
@@ -6,6 +6,7 @@ header.site-header
 		li 
 			a(href='/media') Media 
 		li 
-			a(href='/logout') Logout
+			a(href='/logout') 
+				| <span class="icon">v</span>
 
 		
