--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -637,3 +637,102 @@ section.post img{
   color: #AAA;
 }
 
+#about-profile-area{
+  padding: 0px;
+  min-height: 200px;
+  background: white;
+  color: black;
+  -webkit-border-radius: 3px 3px 0px 0px;
+  -moz-border-radius: 3px 3px 0px 0px;
+  border-radius: 3px 3px 0px 0px;
+  position: relative;
+  min-height: 200px;
+  word-wrap: break-word;
+  font-size: 1.6em;
+  line-height: 1.4em;
+  margin-bottom: 0px;
+  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+}
+
+#about-profile-area #image{
+  float:left;
+  margin-right: 20px;
+}
+
+#about-profile-area .profile-image{
+  border-radius: 3px 0px 0px 0px;
+}
+
+#about-profile-area .profile-description{
+  padding-top: 10px;
+}
+
+#about-profile-area .profile-description ul.social li{
+  float: left;
+}
+
+#about-profile-area .profile-description ul.social li img{
+  opacity: 0.8;
+}
+
+article#about #contact-form-area{
+  padding: 20px;
+  background: #F5F5F5;
+  margin-top: -15px;
+  margin-left: 170px;
+  margin-right: 190px;
+  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  color: #AAA;
+  font-size: 18px;
+  font-weight: bold;
+
+}
+
+article#about #contact-form-area label{
+  display: block;
+
+}
+
+article#about #contact-form-area .button-normal{
+  width: 350px;
+  height: 45px;
+}
+
+article#about #contact-form-area textarea{
+  border: solid 1px #AAA;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 345PX;
+}
+
+article#about #contact-form-area .text-input{
+  border: solid 1px #AAA;
+  outline: none;
+  padding: 8px 5px;
+  width: 340px;
+  font-size: 16px;
+  border-radius: 3px;
+}
+
+article#about #contact-footer{
+  background: white;
+  color: black;
+  padding: 10px 67px;
+  margin-bottom: 25px;
+  -webkit-border-radius: 0px 0px 3px 3px;
+  -moz-border-radius: 0px 0px 3px 3px;
+  border-radius: 0px 0px 3px 3px;
+  position: relative;
+  word-wrap: break-word;
+  font-size: 1.6em;
+  line-height: 1.4em;
+  margin-bottom: 1.6em;
+  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+}
+
