Contact form design altered

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(lang="en")
 		title =pageTitle
 		meta(charset='UTF-8')
 		meta(name="apple-mobile-web-app-capable", content="yes")
+		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
 		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
