--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -190,7 +190,7 @@ a:active {
 .wrapper {
 	margin: 0 auto;
 	max-width: 790px;
-	padding-bottom: 100px;
+	padding-bottom: 10px;
 }
 
 .site-header {
@@ -234,7 +234,7 @@ a:active {
   display: none;
 }
 
-article#sobre #search-form{
+article#about #search-form{
   margin-bottom: 20px;
 }
 
@@ -680,16 +680,19 @@ section.post img{
 article#about #contact-form-area{
   padding: 20px;
   background: #F5F5F5;
-  margin-top: -15px;
+  margin-top: -22px;
   margin-left: 170px;
   margin-right: 190px;
   -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
-  color: #AAA;
-  font-size: 18px;
-  font-weight: bold;
+  color: #585858;
+  font-size: 14px;
+}
 
+article#about #contact-form-area fieldset{
+  padding-top: 0px;
+  padding-bottom: 4px;
 }
 
 article#about #contact-form-area label{
