Contact form altered

--- a/views/contato/index.jade
+++ b/views/contato/index.jade
@@ -29,7 +29,7 @@ article#about
 			form
 
 	div#contact-form-area
-		form.contact-form(name='contact', method='post', action='/contactmessage')
+		form.contact-form(name='contact', method='post', action='/about/message')
 			fieldset
 				label Nome
 				span
