--- a/views/contato/index.jade
+++ b/views/contato/index.jade
@@ -33,18 +33,18 @@ article#about
 			fieldset
 				label Nome
 				span
-					input(name='contact[name]', class='text-input')
+					input(name='name', class='text-input')
 			fieldset
 				label Email	
 				span
-					input(name='contact[email]', class='text-input')
+					input(name='email', class='text-input')
 
 
 
 			fieldset
 				label Mensagem	
 				span
-					textarea#text(name='post[body]', placeholder='', type='text', cols='40', rows='6')
+					textarea#text(name='message', placeholder='', type='text', cols='40', rows='6')
 
 			fieldset
 				input(type="submit", class='button-normal', name='send', value='Enviar')
