--- a/views/menu_admin.jade
+++ b/views/menu_admin.jade
@@ -4,7 +4,9 @@ header.site-header
 		li 
 			a(href='/admin/posts') Posts  
 		li 
-			a(href='/media') Media 
+			a(href='/media') Media
+		li 
+			a(href='/admin/messages') Mensagens 
 		li 
 			a(href='/logout') 
 				| <span class="icon">v</span>
