--- a/views/contato/index.jade
+++ b/views/contato/index.jade
@@ -5,25 +5,34 @@ article#about
 	div#about-profile-area
 		div.profile
 			div#image
-				img.profile-image(src='/img/about/gui.png')
+				img.profile-image(src='/img/about/about.png')
 			div.profile-description
-				p Blabla bla bal bala
+				p Bacharel em Sistemas de Informação, Pós Graduando em Engenharia de Software e Mestrando em Computação Aplicada na Universidade do Estado de Santa Catarina (UDESC).
+
+				Áreas de interesse:
+				| <ul class="areas-interesse">
+				| 	<li>Desenvolvimento Web</li>
+				|	<li>Dispositivos móveis</li>
+				|	<li>Processamento Gráfico</li>
+				|	<li>Aprendizado de Máquina</li>
+				| </ul>
+
 				ul.social
 					li 
-						a(href='#')
-							img(src='/img/icons/facebook.png')
+						a(href='https://www.facebook.com/guidefreitas')
+							img.social-icon(src='/img/icons/facebook.png')
 					li 
-						a(href='#')
-							img(src='/img/icons/twitter.png')
+						a(href='http://twitter.com/guidef')
+							img.social-icon(src='/img/icons/twitter.png')
 					li 
-						a(href='#')
-							img(src='/img/icons/linkedin.png')
+						a(href='http://www.linkedin.com/pub/guilherme-defreitas-juraszek/24/331/2a3')
+							img.social-icon(src='/img/icons/linkedin.png')
 					li 
-						a(href='#')
-							img(src='/img/icons/github.png')
+						a(href='https://github.com/guidefreitas')
+							img.social-icon(src='/img/icons/github.png')
 					li 
-						a(href='#')
-							img(src='/img/icons/skype.png')
+						a(href='callto://guilherme.defreitas')
+							img.social-icon(src='/img/icons/skype.png')
 
 		div.contact
 			form
