--- a/views/menu.jade
+++ b/views/menu.jade
@@ -4,7 +4,7 @@ header.site-header
 		li 
 			a(href='/') Blog 
 		li 
-			a(href='/') Projetos
+			a(href='/projects') Projetos
 		li 
 			a(href='/about') Sobre
 		li
