Projects page added

--- a/views/projects/index.jade
+++ b/views/projects/index.jade
@@ -1,5 +1,25 @@
 article#projects
 	header
 		!=partial('search_field')
-	div.content
-		p Aplicativos
+	
+	div#project.content
+		section
+			div.project-image
+				img(src='/img/projects/quale/quale_home.png')
+			div.project-description
+				h2 
+					a(href='/') Qualé Operadora
+
+				p.description Descubra qual é a operadora de um número de celular.
+
+				ul#stores
+					li
+						a(href='http://itunes.apple.com/us/app/quale-operadora/id515844684?ls=1&mt=8')
+							img(src='/img/stores/app_store_normal.png', width='120', height='40')
+					li
+						a(href='http://windowsphone.com/s?appid=6885db7b-33a9-4a48-81c2-be9757bfafd8')
+							img(src='/img/stores/marketplace_normal.png', width='120', height='40')
+					li
+						a(href='https://play.google.com/store/apps/details?id=br.com.guidefreitas')
+							img(src='/img/stores/google_play_normal.png', width='120', height='40')
+	
