--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -789,3 +789,54 @@ article#about #contact-footer{
 article#projects #search-form{
   margin-bottom: 20px;
 }
+
+article#projects #project.content{
+  background: white;
+  color: black;
+  padding: 0px;
+  margin-bottom: 25px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  position: relative;
+  min-height: 350px;
+  word-wrap: break-word;
+  font-size: 1.6em;
+  line-height: 1.4em;
+  margin-bottom: 1.6em;
+  -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
+}
+
+article#projects .project-image{
+  float: left;
+  margin-right: 20px;
+}
+
+article#projects .project-image img{
+  border-radius: 3px 0px 0px 3px;
+
+}
+
+article#projects .project-description{
+  padding: 10px;
+  font-size: 20px;
+}
+
+article#projects .project-description h2{
+  font-size: 22px;
+}
+article#projects .project-description p.description{
+  height: 180px;  
+}
+
+article#projects .project-description #stores{
+  margin-left: 280px;  
+}
+
+
+article#projects .project-description #stores li{
+  float: left;
+  margin-right: 20px;
+}
