--- a/views/contato/index.jade
+++ b/views/contato/index.jade
@@ -7,7 +7,7 @@ article#about
 			div#image
 				img.profile-image(src='/img/about/about.png')
 			div.profile-description
-				p Bacharel em Sistemas de Informação, Pós Graduando em Engenharia de Software e Mestrando em Computação Aplicada na Universidade do Estado de Santa Catarina (UDESC).
+				p Bacharel em Sistemas de Informação, com especialização em Engenharia de Software e Mestrando em Computação Aplicada na Universidade do Estado de Santa Catarina (UDESC).
 
 
 				ul.social
