--- a/views/projects/layout.jade
+++ b/views/projects/layout.jade
@@ -2,6 +2,8 @@
 html(lang="en")
 	head
 		title =pageTitle
+		meta(name="apple-mobile-web-app-capable", content="yes")
+		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
 		!= css('raphaelicons')
 		!= js('jquery-1.7.2.min')
