Organize code and cleanup

--- a/views/contato/index.jade
+++ b/views/contato/index.jade
@@ -12,19 +12,19 @@ article#about
 
 				ul.social
 					li 
-						a(href='https://www.facebook.com/guidefreitas')
+						a(href=config.author_facebook_url)
 							img.social-icon(src='/img/icons/facebook.png')
 					li 
-						a(href='http://twitter.com/guidef')
+						a(href=config.author_twitter_url)
 							img.social-icon(src='/img/icons/twitter.png')
 					li 
-						a(href='http://www.linkedin.com/pub/guilherme-defreitas-juraszek/24/331/2a3')
+						a(href=config.author_linkedin_url)
 							img.social-icon(src='/img/icons/linkedin.png')
 					li 
-						a(href='https://github.com/guidefreitas')
+						a(href=config.author_github_url)
 							img.social-icon(src='/img/icons/github.png')
 					li 
-						a(href='callto://guilherme.defreitas')
+						a(href=config.author_skype_url)
 							img.social-icon(src='/img/icons/skype.png')
 
 		div.contact
