--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,11 @@ html(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="chrome=1")
 		!= css('app')
 		!= css('raphaelicons')
+		!= css('http://releases.flowplayer.org/5.0.0/skin/minimalist.css')
 		!= js('jquery-1.7.2.min')
+		!= js('http://releases.flowplayer.org/5.0.0/flowplayer.min.js')
 		!= js('app')
+
 	body.site-page
 		img#canvasSource(src='/img/bg2.jpg', witdh="300", height="200")
 		canvas.blur#bgcanvas
